[gd_scene load_steps=8 format=3 uid="uid://bitqgomvfvu3o"]

[ext_resource type="Script" path="res://main.gd" id="1_iu1gi"]
[ext_resource type="PackedScene" uid="uid://b7hlcy533gtdm" path="res://number.tscn" id="2_soi1b"]
[ext_resource type="Shader" path="res://fireworks.gdshader" id="3_45um2"]
[ext_resource type="Texture2D" uid="uid://by870b7q378n2" path="res://res/sky.jpg" id="3_kprfd"]
[ext_resource type="PackedScene" uid="uid://c0fbopu1qbxkp" path="res://ui/hud.tscn" id="5_ajlhs"]
[ext_resource type="Theme" uid="uid://k8y8ag1ldtm2" path="res://ui/menu.tres" id="6_3updi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y46ya"]
shader = ExtResource("3_45um2")
shader_parameter/TWOPI = 6.28319
shader_parameter/NUM_EXPLOSIONS = 4.0
shader_parameter/NUM_PARTICLES = 20.0
shader_parameter/MOD3 = Vector3(0.1031, 0.11369, 0.13787)

[node name="Main" type="Node2D"]
script = ExtResource("1_iu1gi")

[node name="Fireworks" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_y46ya")
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 720.0
offset_bottom = 1440.0
grow_vertical = 2

[node name="Sky" type="TextureRect" parent="."]
offset_right = 720.0
offset_bottom = 1440.0
texture = ExtResource("3_kprfd")

[node name="Number" parent="." instance=ExtResource("2_soi1b")]
position = Vector2(102, 384)

[node name="Number2" parent="." instance=ExtResource("2_soi1b")]
position = Vector2(416, 384)

[node name="Number3" parent="." instance=ExtResource("2_soi1b")]
position = Vector2(102, 808)

[node name="Number4" parent="." instance=ExtResource("2_soi1b")]
position = Vector2(416, 808)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = 230.0
offset_top = 198.0
offset_right = 521.0
offset_bottom = 292.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(120, 42)
theme = ExtResource("6_3updi")
theme_override_colors/font_color = Color(0.807843, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.694118, 0.47451, 0, 1)
theme_override_font_sizes/font_size = 90
text = "Round  1"
vertical_alignment = 1

[node name="HUD" parent="." instance=ExtResource("5_ajlhs")]
